--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.4.0",
-    "react-stripe-elements": "^6.1.0"
+    "react-stripe-elements": "^6.1.0",
+    "netlify-lambda": "^1.6.0"
   },
   "scripts": {
     "start": "run-p start:**",
@@ -21,7 +22,8 @@
     "build:app": "react-scripts build",
     "build:lambda": "netlify-lambda build src/lambda",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postinstall": "netlify-lambda install"
   },
   "eslintConfig": {
     "extends": "react-app"
